# ai-chatbot-rag-portfolio

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md
backend/: .env.example  docker-compose.yml  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: auth.py  conversations.py  deps.py  documents.py  health.py  messages.py
backend/app/api/v1/: auth.py  chats.py  documents.py  router.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  chunk.py  conversation.py  document.py  message.py  models.py  user.py
backend/app/schemas/: auth.py  chat.py  conversation.py  document.py  message.py
backend/app/services/: auth.py  chat.py  document.py  documents.py  embedding.py  llm.py  rag.py
backend/app/utils/: security.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_documents.py  test_rag.py  test_websocket.py
backend/tests/integration/: test_auth_flow.py  test_chat_flow.py  test_document_flow.py
backend/tests/unit/: test_auth_utils.py  test_chunking.py  test_rag_assembly.py
docs/: DESIGN.claude.md  DESIGN.md  DESIGN.reconciled.md  DESIGN_BRIEF.md  DESIGN_TEMPLATE.md  SETUP.md
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/__tests__/components/: ChatInterface.test.tsx  DocumentUpload.test.tsx  MessageBubble.test.tsx  MessageInput.test.tsx
frontend/__tests__/hooks/: useChat.test.tsx
frontend/__tests__/integration/: chat-flow.test.tsx
frontend/__tests__/lib/: format.test.ts
frontend/app/: globals.css  layout.tsx
frontend/app/(app)/: layout.tsx  page.tsx
frontend/components/chat/: ChatInterface.tsx  MessageInput.tsx  MessageList.tsx  StreamingMessage.tsx
frontend/components/documents/: DocumentList.tsx  DocumentUpload.tsx
frontend/components/layout/: AppShell.tsx
frontend/hooks/: useAuth.ts  useChat.ts  useDocuments.ts  useStreaming.ts
frontend/lib/: api.ts  auth.ts  types.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/hooks/: useAuth.ts  useChat.ts  useDocuments.ts
frontend/src/lib/: api-client.ts  (+1 more)
(+19 files in other folders)
