[project]
name = "ai-chatbot-rag-backend"
version = "0.1.0"
description = "FastAPI backend for AI chatbot with RAG"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "sqlalchemy>=2.0.0",
  "aiosqlite>=0.20.0",
  "asyncpg>=0.29.0",
  "python-multipart>=0.0.9",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.1",
  "email-validator>=2.1.0.post1",
  "openai>=1.50.0",
  "langchain-text-splitters>=0.2.0",
  "httpx>=0.27.0",
  "pypdf>=4.2.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "asgi-lifespan>=2.1.0",
  "httpx>=0.27.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
